# webapp-city-reframe-audition

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deck.html  deploy.sh  docker-compose.prod.yml  nginx.conf  pyproject.toml  start.sh
.claude/: loop_tasks.md
auditor/: annotator.py  main.py  models.py  pii_masker.py  s3.py  version_selector.py  wiki.py
auditor/eval/: harness.py  (+5 more)
docs/: AI技術能力說帖.md  PoC_規則自動抽取_111年版.md  regulation-versions.md  urban-renewal-111-wiki.md  審議能力提升方案.md  審議資料表_OCR訓練規劃.md  待確認清單_法規與流程.md  會話摘要_2026-07-11.md  會話摘要_2026-07-12.md  會話摘要_2026-07-14.md  會議整理_副總回饋與對應方式.md  格式校正與正規化_實作說明.md  補助計畫書_都更AI協審_第一期_v0.1.md  補助計畫書_都更AI協審_第一期_v0.2.md  補助計畫書_骨幹_都更AI協審_第一期.md  都更AI協審_副市長說帖.md  開發內容說明_都更AI協審_分項計劃.md  需求建議書_地端AI算力設備.md
nginx/: nginx.conf
scripts/: build_template_schema.py
templates/: report.html  upload.html  wiki.html
tests/: test_api.py  test_benchmark.py  test_confidence_scorer.py  test_cross_doc_comparator.py  test_eval_harness.py  test_evidence_grounder.py  test_evidence_snapshot.py  test_field_auditor.py  test_html_reporter.py  test_method_docs.py  test_normalize.py  test_ocr.py  test_page_text.py  test_parsing_pipeline.py  test_rules.py  test_s3.py  test_table_extractor.py  test_table_reconstruct.py  test_template_anchor.py  test_template_schema.py  test_timezone.py  test_vlm_reader.py
審議資料表_訓練標註/: README.md  build_bundle.py  make_annotations.py  make_annotations_highres.py  make_label_tool.py  make_label_tool_highres.py  reexport_highres.py  refill_via_prod_paddle.py  template_extract_poc.py  vlm_zeroshot_poc.py
(+47 files in other folders)
