[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-renewal-auditor"
version = "0.1.0"
description = "臺北市都市更新審議自動化審查 POC"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pdfplumber>=0.11.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.40.0",
    "pymupdf>=1.23.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "paddleocr>=2.7.0,<3.0.0",
    "paddlepaddle>=2.6.0,<3.0.0",
    "pillow>=10.0.0",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["auditor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
